--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Hi! I'm Xu Xin
-subtitle: I have a passion for exploring and decoding the brain
+subtitle: I have a passion for interaction and games
 ---
